<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bluetooth App</string>
    <string name="turn_on">turn on</string>
    <string name="close_app">close app</string>
    <string name="turn_off">turn Off</string>
    <string name="get_paired_devices">Get paired devices</string>
    <string name="left">left</string>
    <string name="stop">stop</string>
    <string name="backward">backward</string>
    <string name="right">right</string>
    <string name="forward">forward</string>
    <string name="show">Show</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="disconnect_pairing">Disconnect Pairing</string>
    <string name="status">status</string>
    <string name="show_paired_devices">show paired devices</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="scan">SCAN</string>
    <string name="back">back</string>
    <string name="pair_with_new_devices">Pair with new devices</string>
    <string name="show_new_devices">show new devices</string>
</resources>
