<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5373737"
    tools:context=".Activity3">

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="337dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:text="@string/disconnect_pairing"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/status"
        android:layout_width="227dp"
        android:layout_height="41dp"
        android:layout_marginBottom="15dp"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <Button
        android:id="@+id/back"
        android:layout_width="453dp"
        android:layout_height="43dp"
        android:layout_marginBottom="159dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>